# pruck

./: .gitignore  README.md  dune  dune-project  pruck.opam
src/: column.ml  column.mli  data.ml  df.ml  df.mli  dune
src/parquet/: dune  format.thrift  format_consts.ml  format_types.ml  format_types.mli  parquet.ml
test/: dune  gov-uk-cycling.csv  test.ml  tests.expected  tests.ml
